-- SQLite
/*
===========================================
  PIEDRA AZUL MEDICAL SERVICES - SQL SCRIPT
===========================================
*/

PRAGMA foreign_keys = ON;

/*
===========================================
  DROP TABLES
===========================================
*/
DROP TABLE IF EXISTS APPOINTMENT;
DROP TABLE IF EXISTS PATIENT;
DROP TABLE IF EXISTS MEDICALSTAFF;
DROP TABLE IF EXISTS USER;
DROP TABLE IF EXISTS ROLE;
DROP TABLE IF EXISTS STATE;

/*
===========================================
  CREATE TABLES
===========================================
*/

/* TABLE ROLE */
CREATE TABLE ROLE (
  ROLE_ID   INTEGER PRIMARY KEY NOT NULL,
  ROLE_TYPE TEXT    NOT NULL UNIQUE
                    CHECK (ROLE_TYPE IN ('ADMINISTRATOR', 'PATIENT', 'CLINICALSTAFF', 'APPOINTMENTMANAGER'))
);

/* TABLE STATE */
CREATE TABLE STATE (
  STATE_ID   INTEGER PRIMARY KEY NOT NULL,
  STATE_TYPE TEXT    NOT NULL
                      CHECK (STATE_TYPE IN ('ACTIVE', 'INACTIVE'))
);

/* TABLE USER */
CREATE TABLE USER (
  USER_ID       INTEGER PRIMARY KEY AUTOINCREMENT,
  USER_USERNAME TEXT    NOT NULL UNIQUE,
  USER_FULLNAME TEXT    NOT NULL,
  USER_PASSWORD TEXT    NOT NULL,
  USER_ROLE     INTEGER NOT NULL REFERENCES ROLE(ROLE_ID),
  USER_STATE    INTEGER NOT NULL REFERENCES STATE(STATE_ID)
);

/* TABLE MEDICALSTAFF */
CREATE TABLE MEDICALSTAFF (
  MED_ID         INTEGER PRIMARY KEY REFERENCES USER(USER_ID),
  MED_PROFESSION TEXT    NOT NULL CHECK (MED_PROFESSION IN ('MEDIC', 'THERAPIST')),
  MED_SPECIALITY TEXT    NOT NULL CHECK (MED_SPECIALITY IN ('NEURAL', 'CHIROPRACTIC', 'PHYSIO'))
);

/* TABLE PATIENT */
CREATE TABLE PATIENT (
  PAT_ID                INTEGER PRIMARY KEY REFERENCES USER(USER_ID),
  PAT_CITIZENSHIPCARD   NUMERIC NOT NULL UNIQUE,
  PAT_PHONENUMBER       TEXT    NOT NULL
);

/* TABLE APPOINTMENT */
CREATE TABLE APPOINTMENT (
  APP_ID                  INTEGER PRIMARY KEY AUTOINCREMENT,
  APP_PAT_CITIZENSHIPCARD NUMERIC NOT NULL REFERENCES PATIENT(PAT_CITIZENSHIPCARD),
  APP_PAT_PHONENUMBER     TEXT    NOT NULL,
  APP_MED_ID              INTEGER          REFERENCES MEDICALSTAFF(MED_ID),
  APP_DATETIME            DATETIME NOT NULL,
  APP_TYPEOFCARE          TEXT     NOT NULL CHECK (APP_TYPEOFCARE IN ('GENERAL', 'SPECIALIZED'))
);


/* CREATE ROLE ADMINISTRATOR */
INSERT INTO ROlE (ROLE_ID, ROLE_TYPE) VALUES (1, 'ADMINISTRATOR');

/* CREATE STATE ACTIVE */
INSERT INTO STATE (STATE_ID, STATE_TYPE) VALUES (1, 'ACTIVE');

/* CREATE STATE INACTIVE */
INSERT INTO STATE (STATE_ID, STATE_TYPE) VALUES (2, 'INACTIVE');

/* CREATE ADMIN ACTIVE */
INSERT INTO USER (USER_USERNAME, USER_FULLNAME, USER_PASSWORD, USER_ROLE, USER_STATE) VALUES ('admin123', 'Henry Fernando Mulato Llanten', '123456789', 1, 1);

/* CREATE ADMIN INACTIVE */
INSERT INTO USER (USER_USERNAME, USER_FULLNAME, USER_PASSWORD, USER_ROLE, USER_STATE) VALUES ('admin1234', 'Luis Diaz', '123456789', 1, 2);

/* DELETE ADMIN ACTIVE */
DELETE FROM USER
WHERE USER_USERNAME = 'admin123';

/* DELETE ADMIN INACTIVE */
DELETE FROM USER
WHERE USER_USERNAME = 'admin1234';