package com.piedrazul.Domain.enums;

public enum AttentionType {
  General,
  Specialized
}
