package com.piedrazul.Domain.enums;

public enum Profession {
  Medic,
  Therapist
}
