package com.piedrazul.Domain.enums;

public enum Specialty {
  NeuralTherapy,
  Chiropractic,
  Physiotherapy
}
